--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Locator</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="app-container">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="Js.js"></script>
     <script>
         // JavaScript for sharing admin URL
         function shareAdminUrl() {
